added client side react and config accordingly

--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Learning to implement API Authentication",
   "main": "server/app.js",
   "scripts": {
-    "start": "node server-app",
-    "dev": "nodemon server-app"
+    "start": "node server/index",
+    "server-dev": "nodemon server/index.js",
+    "client-dev": "npm start --prefix client",
+    "dev": "concurrently \"npm run server-dev\" \"npm run client-dev\""
   },
   "repository": {
     "type": "git",
@@ -22,6 +24,8 @@
     "@hapi/joi": "^17.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "concurrently": "^5.2.0",
+    "cross-env": "^7.0.2",
     "express": "^4.17.1",
     "express-promise-router": "^4.0.1",
     "jsonwebtoken": "^8.5.1",
